--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <nav>
             <img src="winmo images/logo.png" class="logo">
             <ul>
-                <li><a href="header">Home</a></li>
-                <li><a href="services">Services</a></li>
-                <li><a href="demos">Demos</a></li>
-                <li><a href="about">About</a></li>
-                <li><a href="contact">Contact</a></li>
-                <li><a href="privacy">Privacy Policy</a></li>
-                <li><a href="tos">Terms of Service</a></li>
+                <li><a href="#header">Home</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#demos">Demos</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="#privacy">Privacy Policy</a></li>
+                <li><a href="#tos">Terms of Service</a></li>
             </ul>
         </nav>
         <div class="header-text">
