--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Winmo Website</title>
     <link rel="stylesheet" href="syle.css">
     <script src="https://kit.fontawesome.com/d7419be513.js" crossorigin="anonymous"></script>
-    <base href="https://winmogames.com/">
 </head>
 <body>
 <div id="header">
@@ -15,13 +14,13 @@
         <nav>
             <img src="winmo images/logo.png" class="logo">
             <ul>
-                <li><a href="/header">Home</a></li>
-                <li><a href="/services">Services</a></li>
-                <li><a href="/demos">Demos</a></li>
-                <li><a href="/about">About</a></li>
-                <li><a href="/contact">Contact</a></li>
-                <li><a href="/privacy">Privacy Policy</a></li>
-                <li><a href="/tos">Terms of Service</a></li>
+                <li><a href="#header">Home</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#demos">Demos</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="#privacy">Privacy Policy</a></li>
+                <li><a href="#tos">Terms of Service</a></li>
             </ul>
         </nav>
         <div class="header-text">
